eslint better rules and linted proyect

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,9 @@
     "rules": {
         // Javascript
         "no-use-before-define": "off",
-
+        "comma-dangle": ["error", "never"],
+        "jsx-a11y/click-events-have-key-events": "off",
+        "jsx-a11y/anchor-is-valid": "warn",
         // Typescript
         "react/react-in-jsx-scope": "off",
         "react/jsx-props-no-spreading": "off",
