--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,18 +3,15 @@
     "baseUrl": "./",
     "module": "ESNext",
     "paths": {
-      "Comp/*": ["./components/*"],
       "Cont/*": ["./containers/*"],
       "Pages/*": ["./pages/*"],
       "CComps/*": ["./commonComps/*"],
       "Utils/*": ["./cUtils/*"],
       "Others/*": ["./others/*"],
-      "Actions/*": ["./redux/actions/*"],
-      "@Reducers/*": ["./redux/reducers/*"],
+      "Requests/*": ["./requests/*"],
+      "AppConfig/*": ["./appConfig/*"],
       "@Redux/*": ["./redux/*"],
       "@Declarations": ["./declarations.d.ts"],
-      "Reducers": ["./redux/reducers"],
-      "Types": ["./redux/types.ts"],
       "Images/*": ["./public/images/*"],
       "Styles/*": ["./public/styles/*"]
     }
