--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "eslint-check": "npx eslint .",
     "eslint-fix": "npx eslint . --fix",
+    "clean-install": "rm -r ./node_modules; npm i",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
